--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background-color: pink;
+
 }
 
 h1 {
